# playgrounds

cpp-playground/: .gitignore  CMakeLists.txt  TestClass.cpp  TestClass.h  main.cpp  zmq_main.cpp
flink-playground/: pom.xml
flink-playground/src/main/java/de/ericdoerheit/: CarLog.java  CarLogLaneInferrer.java  Job.java  LaneBorderPoint.java  SocketTextStreamWordCount.java  WordCount.java
ionic-playground/ionic2-app/: config.xml  package.json
ionic-playground/ionic2-app/app/theme/: app.variables.scss
java-playground/: pom.xml
java-playground/src/main/java/de/ericdoerheit/basics/: ObjectComparison.java
java-playground/src/main/java/de/ericdoerheit/jsprit/: FixedConstrains.java
java-playground/src/main/java/de/ericdoerheit/sparkjava/: WebApi.java
java-playground/src/main/resources/: log4j2.xml
node-playground/: index.js  package.json
python-playground/: 3dplot_plotly.ipynb  images-to-tfrecords-shuffled.py  images-to-tfrecords.py  oriented_bounding_box_fitting.ipynb  playground.ipynb  plot_cluster_comparison.ipynb  plotly_point_cloud_3d.ipynb  tensorflow-cnn.ipynb
